--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
+
 }
 
 android {
@@ -23,6 +24,12 @@ android {
     }
 
     buildTypes {
+
+        debug {
+            debuggable true
+
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -35,8 +42,11 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    dataBinding {
+        enabled = true
+    }
     buildFeatures {
-        compose true
+        viewBinding true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.1.1'
@@ -50,71 +60,66 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
-    implementation "androidx.compose.ui:ui:$compose_ui_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
-    implementation 'androidx.compose.material:material:1.1.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
-    // Navigation
-    implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
-    // material3
-    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
-    implementation "androidx.compose.material3:material3:1.0.1"
 
-    //Dagger - Hilt
+    testImplementation 'junit:junit:4.+'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+
+    // ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
+
+    //Network
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation("com.squareup.okhttp3:okhttp:5.0.0-alpha.2")
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
+
+    //DI Hilt
     implementation 'com.google.dagger:hilt-android:2.44.2'
     kapt 'com.google.dagger:hilt-compiler:2.44.2'
-    kapt "androidx.hilt:hilt-compiler:1.0.0"
-    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+
 
     //Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4"
 
-    // To use Kotlin coroutines with lifecycle-aware components
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
-    //Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    //Room Database
+    implementation "androidx.room:room-runtime:2.4.3"
+    kapt "androidx.room:room-compiler:2.4.3"
+    // optional - Kotlin Extensions and Coroutines support for Room
+    implementation "androidx.room:room-ktx:2.4.3"
 
-    //GSON converter
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
 
-    // Coil
-    implementation("io.coil-kt:coil-compose:2.2.2")
 
-    // OkHttp
-    implementation("com.squareup.okhttp3:okhttp:5.0.0-alpha.2")
+    // Navigation
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 
-    //Room
-    implementation("androidx.room:room-runtime:$room_version")
-    annotationProcessor("androidx.room:room-compiler:$room_version")
 
-    // To use Kotlin annotation processing tool (kapt)
-    kapt("androidx.room:room-compiler:$room_version")
-    implementation "androidx.room:room-ktx:$room_version"
 
-    // Google play's location library
-    implementation 'com.google.android.gms:play-services-location:21.0.1'
+//    debugImplementation("com.infinum.dbinspector:dbinspector:5.2.8")
+//    debugImplementation "com.infinum.dbinspector:dbinspector:5.4.9"
+    implementation 'joda-time:joda-time:2.9.4'
+    implementation 'androidx.biometric:biometric-ktx:1.2.0-alpha05'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.1.1'
 
-    // provides Android runtime permissions support for Jetpack Compose
-    implementation "com.google.accompanist:accompanist-permissions:0.28.0"
+    // implementation 'com.google.android.play:core:1.10.0'
+    implementation 'com.airbnb.android:lottie:3.4.0'
 
-    // To use the Palette class from the AndroidX Palette library
-    implementation 'androidx.palette:palette:1.0.0'
-}
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 
-// Allow references to generated code
-kapt {
-    correctErrorTypes true
 }
